# mnist-nn-by-hand

./: .gitignore  .tool-versions  README.md  Taskfile.yml  pyproject.toml  render_example.py
dataset_loaders/: mnist.py
render/: terminal.py
