[project]
name = "mnist-nn-by-hand"
version = "0.0.1"
description = "Training a Neural Network by hand"
authors = [
    {name = "Ivan De Marino",email = "ivan.de.marino@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "numpy (==2.3.2)",
    "python-mnist (==0.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false